Importing sources via Bibtex and citing accordingly

--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt,a4paper]{article}
 \usepackage{graphicx}
+%\usepackage{natbib}
 
 \begin{document}
 
@@ -23,7 +24,7 @@
         \textbf{Flynn Kelly}\\
         47418589\\
         
-        Commenced: 17/02/2024\\
+        Commenced: 17/02/2024 - S1 2024\\
         Mode of study: Full-time - Internal\\
         Supervisor: Dr Konstanty Bialkowski
         
@@ -42,29 +43,33 @@
 
 % Beginning of Sections
 \section{Abstract}
+Testing, testing, submitting proposal on the topic of passive radar detection embedded in an IoT device.
+Testing the citation \cite{DTSO2009}
+
+Second citation \cite{SIGNAL2013}
+
+\section{Topic, Goal and Relevance}
+\subsection{Field}
+\subsection{Scope of Current Research}
+\subsection{Gap in Knowledge}
+\subsection{Brief Research Plan}
 
 \section{Background and Literature Review}
-\subsection{Introduction}
 \subsection{Literature Review}
-\subsubsection{Recommender System Overview}
-\subsubsection{Session-Based Recommender Systems}
-\subsubsection{Privacy-Preserving Recommender Systems}
-\subsection{Motivation}
+% ADD MORE SUBSECTIONS HERE BASED ON LIT REVIEW BREAKDOWN
+\subsection{Contextual Gap of Knowledge}
+\subsection{Pilot Studies}
 
-\section{Program and Design of the Research Investigation}
-\subsection{Methodology}
-\subsubsection{Session-based Recommendation Module}
-\subsubsection{Attribute Inference Attacker}
-\subsubsection{Privacy-Preserving GAN Module}
-\subsection{Research Plan}
-\subsubsection{Datasets}
-\subsubsection{Evaluation Metrics}
-\subsubsection{Baseline}
-\subsubsection{Milestones for Completion of the Program}
-\subsection{OHS Risk and Ethic assessment}
+
+\section{Project Plan}
+\subsection{Aim of Project}
+\subsection{Milestones}
+\subsection{Timeline}
+
 
 % References (You will need to use BibTeX to manage your references)
 % The bibliography style can be changed to suit your needs
+\newpage
 \bibliographystyle{plain}
 \bibliography{references}
 
