--- a/Proposal/references.bib
+++ b/Proposal/references.bib
@@ -1,4 +1,16 @@
-﻿@techreport{DTSO2009,
+﻿@inproceedings{DABsignal,
+  author    = {Coleman, Cristopher and Yardley, Heath},
+  booktitle = {2008 International Conference on Radar},
+  title     = {DAB based passive radar: Performance calculations and trials},
+  year      = {2008},
+  volume    = {},
+  number    = {},
+  pages     = {691-694},
+  keywords  = {Radar;Receivers;Passive radar;Lighting;Radar antennas;Distance measurement;Transmitters},
+  doi       = {10.1109/RADAR.2008.4654009}
+}
+
+@techreport{DTSO2009,
   author      = {James Palmer, Simon Palumbo, Tri-Tan Van Cao and and Howard, Stephen},
   title       = {A new Illuminator of Opportunity Bistatic Radar
                  Research Project at DSTO},
@@ -8,7 +20,7 @@
   type        = {Report}
 }
 
-@book{INTR2017,
+@book{INTRO2017,
   author    = {Griffiths, H. and Baker, Christopher J. and Xplore, Ieee},
   title     = {An introduction to passive radar},
   publisher = {Artech House
@@ -28,10 +40,46 @@
   type      = {Book}
 }
 
-@article{SIGNAL2013,
+@inproceedings{IOTpassiveRadar,
+  author    = {Moser, Daniel and Tresoldi, Giorgio and Schüpbach, Christof and Lenders, Vincent},
+  booktitle = {2019 IEEE Radar Conference (RadarConf)},
+  title     = {Design and Evaluation of a Low-Cost Passive Radar Receiver Based on IoT Hardware},
+  year      = {2019},
+  volume    = {},
+  number    = {},
+  pages     = {1-6},
+  keywords  = {Passive radar;Surveillance;Frequency modulation;Receivers;Radar tracking;Aircraft},
+  doi       = {10.1109/RADAR.2019.8835690},
+  issn      = {2375-5318},
+  month     = {April}
+}
+
+  @article{SIGNAL2013,
   author  = {Mateusz Malanowski, Krzysztof Kulpa, Janusz Kulpa, Piotr Samczynski, Jacek Misiurewicz},
   title   = {Analysis of detection range of FM-based passive radar},
   journal = {IET Radar, Sonar and Navigation},
   year    = {2013},
   type    = {Journal Article}
 }
+
+
+@incollection{FundamentalsPassiveRadar,
+	author = {Griffiths, Hugh},
+	booktitle = {Academic Press Library in Signal Processing: Volume 2},
+	doi = {https://doi.org/10.1016/B978-0-12-396500-4.00016-8},
+	editor = {Nicholas D. Sidiropoulos and Fulvio Gini and Rama Chellappa and Sergios Theodoridis},
+	issn = {2351-9819},
+	keywords = {Radar, Bistatic radar, Tracking, Detection, Waveform diversity, Clutter diversity, Illuminator of opportunity},
+	pages = {813-855},
+	publisher = {Elsevier},
+	series = {Academic Press Library in Signal Processing},
+	title = {Chapter 16 - Passive Bistatic Radar},
+	url = {https://www.sciencedirect.com/science/article/pii/B9780123965004000168},
+	volume = {2},
+	year = {2014},
+	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/B9780123965004000168},
+	bdsk-url-2 = {https://doi.org/10.1016/B978-0-12-396500-4.00016-8}}
+
+
+
+
