--- a/Proposal/references.bib
+++ b/Proposal/references.bib
@@ -81,5 +81,25 @@
 	bdsk-url-2 = {https://doi.org/10.1016/B978-0-12-396500-4.00016-8}}
 
 
+@article{zhang2023intelligent,
+  title={Intelligent sensor-fused system for traffic monitoring},
+  author={Zhang, Lu},
+  year={2023}
+}
 
+@INPROCEEDINGS{DABfeatures,
+  author={Coleman, C.J. and Watson, R.A. and Yardley, H.},
+  booktitle={2008 IEEE Radar Conference}, 
+  title={A practical bistatic passive radar system for use with DAB and DRM illuminators}, 
+  year={2008},
+  volume={},
+  number={},
+  pages={1-6},
+  keywords={Passive radar;Radio broadcasting;Digital audio broadcasting;Bioreactors;Radio transmitters;Bandwidth;Bistatic radar;Digital Radio Mondiale;Radar tracking;Monitoring;Passive Bistatic Radar;Digital Audio Broadcasting;Digital Radio Mondiale},
+  doi={10.1109/RADAR.2008.4721007}}
 
+@article{DABambiguity,
+  title={Ambiguity Function Analysis and Direct-Path Signal Filtering of the Digital Audio Broadcast (DAB) Waveform for Passive Coherent Location (PCL)},
+  author={Guner, Abdulkadir},
+  year={2002}
+}
